--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <div class="rock_your_app">
+    <div class="rock_your_app">
         <header>
             <div class="container">
                 <div class="logo">
@@ -52,7 +52,7 @@
                 targeted audiences.
             </div>
         </div>
-        <img src="img/rock_your_app/hand_with_phone.png" class="hand_with_phone">
+        <!-- <img src="img/rock_your_app/hand_with_phone.png" class="hand_with_phone"> -->
     </div>
     <div class="we_provide">
         <div class="header">
@@ -284,7 +284,7 @@
             </div>
 
         </div>
-    </div> 
+    </div>
     <div class="sources_content">
         <div class="content">
             <div class="content_background element">
@@ -515,7 +515,7 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 
     <div class="partners_header">
         <div class="header">
@@ -774,7 +774,313 @@
                 </div>
             </div>
         </div>
+        <div class="partner_row">
+            <div class="partner_row_inner">
+                <div class="partner_element">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/15.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Betreels
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/16.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Tasp
+                        </div>
+                    </div>
+                </div>
+
+                <div class="partner_element">>
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/17.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Campeon
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">>
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/18.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            ComeOn
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/19.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Libertex
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">>
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/20.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Stormgain
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/21.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            BetMgM
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">>
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/22.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            888 Holdings
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="partners_button">
+        <div class="button element">
+            <div class="wrapper_yellow element">
+                <img src="img/sources/button/wrapper_yellow.svg">
+            </div>
+            <div class="wrapper element">
+                <img src="img/sources/button/wrapper.svg">
+            </div>
+            <div class="text element">
+                All sources
+            </div>
+        </div>
+    </div>
+
+
+    <div class="latest_article_header">
+        <div class="header">
+            <div class="text_wrapper element">
+                <img src="img/latest_article/header_text_wrapper.svg">
+            </div>
+            <div class="text_wrapper_background element">
+                <img src="img/latest_article/header_text_wrapper_background.svg">
+            </div>
+            <div class="text element element">
+                <div class="wrap">LATEST ARTICLE</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="latest_article_content">
+        <div class="latest_article_row">
+            <div class="latest_article_row_inner">
+                <div class="latest_article_element">
+                    <div class="latest_article_wrapper_background element">
+                        <img src="img/latest_article/latest_article_wrapper_background.svg">
+                    </div>
+                    <div class="read_more_background element">
+                        <img src="img/latest_article/read_more_background.svg">
+                    </div>
+                    <div class="read_more_text element">
+                        <div class="wrap">
+                            READ IN BLOG
+                        </div>
+                    </div>
+                    <div class="text element">
+                        <div class="date">
+                            24.03.2023
+                        </div>
+                        <div class="article">
+                            Mobile Game Mechanics: Basic, Advanced, and Emerging: The Ultimate List People with
+                            cognitive
+                            disabilities or literacy problems may have difficulty reading the complex...
+                        </div>
+                    </div>
+                </div>
+                <div class="latest_article_element">
+                    <div class="latest_article_wrapper_background element">
+                        <img src="img/latest_article/latest_article_wrapper_background.svg">
+                    </div>
+                    <div class="read_more_background element">
+                        <img src="img/latest_article/read_more_background.svg">
+                    </div>
+                    <div class="read_more_text element">
+                        <div class="wrap">
+                            READ IN BLOG
+                        </div>
+                    </div>
+                    <div class="text element">
+                        <div class="date">
+                            24.03.2023
+                        </div>
+                        <div class="article">
+                            Mobile Game Mechanics: Basic, Advanced, and Emerging: The Ultimate List People with
+                            cognitive
+                            disabilities or literacy problems may have difficulty reading the complex...
+                        </div>
+                    </div>
+                </div>
+                <div class="latest_article_element">
+                    <div class="latest_article_wrapper_background element">
+                        <img src="img/latest_article/latest_article_wrapper_background.svg">
+                    </div>
+                    <div class="read_more_background element">
+                        <img src="img/latest_article/read_more_background.svg">
+                    </div>
+                    <div class="read_more_text element">
+                        <div class="wrap">
+                            READ IN BLOG
+                        </div>
+                    </div>
+                    <div class="text element">
+                        <div class="date">
+                            24.03.2023
+                        </div>
+                        <div class="article">
+                            Mobile Game Mechanics: Basic, Advanced, and Emerging: The Ultimate List People with
+                            cognitive
+                            disabilities or literacy problems may have difficulty reading the complex...
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="latest_article_button">
+        <div class="button element">
+            <div class="wrapper_yellow element">
+                <img src="img/sources/button/wrapper_yellow.svg">
+            </div>
+            <div class="wrapper element">
+                <img src="img/sources/button/wrapper.svg">
+            </div>
+            <div class="text element">
+                Go to blog
+            </div>
+        </div>
+    </div>
+
+    <div class="footer_and_form_header">
+        <div class="header">
+            <div class="text_wrapper element">
+                <img src="img/footer_and_form/header_text_wrapper.svg">
+            </div>
+            <div class="text_wrapper_background element">
+                <img src="img/footer_and_form/header_text_wrapper_background.svg">
+            </div>
+            <div class="header_text_decor element">
+                <img src="img/footer_and_form/header_text_decor.svg">
+            </div>
+            <div class="text element element">
+                <div class="wrap">Contacts</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer_and_form_content">
+
+        <div class="footer_and_form">
+            <div class="footer_and_form_inner">
+                <div class="background element">
+                    <img src="img/footer_and_form/form_background.svg">
+                </div>
+                <div class="background_wrapper element">
+                    <img src="img/footer_and_form/form_background_wrapper.svg">
+                </div>
+                <div class="form element">
+                    <form>
+                        <div class="left">
+                            <label>Name</label>
+                            <input type="text">
+                            <label>Last name</label>
+                            <input type="text">
+                            <label>Email</label>
+                            <input type="text">
+                            <label>Phone</label>
+                            <input type="text">
+                        </div>
+                        <div class="right">
+                            <label>
+                                Your message
+                            </label>
+                            <textarea>
+                            </textarea>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
