full first banner

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="cloud el">
             <div class="logo el"><img src="img/header/logo/logo.png"></div>
-            <img src="img/rock/cloud.svg">
+            <img src="img/rock/cloud.svg" class="cloud_img">
             <div class="text">
                 <div class="h1_first_part">
                     Rock your app
