--- a/index.html
+++ b/index.html
@@ -61,97 +61,103 @@
         <img src="img/rock/hand.png" class="hand">
     </div>
 
-    <!-- <div class="we_provide">
+    <div class="we_provide">
         <div class="header">
-            <div class="header_element_wrapper ">
-                <svg width="264" height="100" viewBox="0 0 264 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14.8088 96.9707L2.60386 41.5881L260.94 3.25499L253.519 79.4044L14.8088 96.9707Z"
-                        stroke="white" stroke-width="4.18086" />
-                </svg>
+            <div class="wrapper el">
+                <img src="img/we_provide/header/wrapper.svg">
             </div>
-            <div class="header_element_wrapper_fill">
-                <img src="img/we_provide/header_element_wrapper_fill.svg">
+            <div class="bg el">
+                <img src="img/we_provide/header/bg.svg">
             </div>
-            <div class="header_element_wrapper_decor">
-                <img src="img/we_provide/header_element_wrapper_decor.svg">
+            <div class="decor el">
+                <img src="img/we_provide/header/decor.svg">
             </div>
-            <div class="header_element_wrapper_decor_2">
-                <img src="img/we_provide/header_element_wrapper_decor_2.png">
+            <div class="bomb el">
+                <img src="img/we_provide/header/bomb.png">
             </div>
             <p>WE PROVIDE</p>
         </div>
-        <div class="navigation_wrapper">
-            <div class="navigation" id="we_provide_navigation">
-                <div class="navigation_element active first">
-                    <span>
-                        User Acquisition
-                    </span>
-                    & retargeting
-                    <div class="gold">
-                        <img src="img/we_provide/nav_element_wrapper.png">
-                    </div>
-                    <div class="navigation_element_decor">
-                        <svg width="200" height="14" viewBox="0 0 84 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="topline" d="M83.3272 9.14233L11.9619 4.65066"
-                                stroke="url(#paint0_linear_1180_16529)" stroke-width="3.06872" />
-                            <path class="botline" d="M77.3277 12.0837L0.60741 10.2426" stroke="white"
-                                stroke-width="3.06872" />
-                            <defs>
-                                <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
-                                    y2="7.88615" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FF9323" />
-                                    <stop offset="1" stop-color="#FFF02E" />
-                                </linearGradient>
-                            </defs>
-                        </svg>
-                    </div>
-                </div>
-                <div class="navigation_element second">
-                    <span>
-                        Strategy
-                    </span>
-                    And Planning
-                    <div class="gold">
-                        <img src="img/we_provide/nav_element_wrapper.png">
-                    </div>
-                    <div class="navigation_element_decor">
-                        <svg width="200" height="14" viewBox="0 0 84 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="topline" d="M83.3272 9.14233L11.9619 4.65066"
-                                stroke="url(#paint0_linear_1180_16529)" stroke-width="3.06872" />
-                            <path class="botline" d="M77.3277 12.0837L0.60741 10.2426" stroke="white"
-                                stroke-width="3.06872" />
-                            <defs>
-                                <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
-                                    y2="7.88615" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FF9323" />
-                                    <stop offset="1" stop-color="#FFF02E" />
-                                </linearGradient>
-                            </defs>
-                        </svg>
+        <div class="nav_wrap">
+            <div class="nav" id="we_provide_navigation">
+                <div class="nav_element_wrap">
+                    <div class="nav_element active first">
+                        <span>
+                            User Acquisition
+                        </span>
+                        & retargeting
+                        <div class="gold">
+                            <img src="img/we_provide/nav_element_wrapper.png">
+                        </div>
+                        <div class="lines">
+                            <svg width="200" height="14" viewBox="0 0 84 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path class="topline" d="M83.3272 9.14233L11.9619 4.65066"
+                                    stroke="url(#paint0_linear_1180_16529)" stroke-width="3.06872" />
+                                <path class="botline" d="M77.3277 12.0837L0.60741 10.2426" stroke="white"
+                                    stroke-width="3.06872" />
+                                <defs>
+                                    <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
+                                        y2="7.88615" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF9323" />
+                                        <stop offset="1" stop-color="#FFF02E" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
                     </div>
                 </div>
-                <div class="navigation_element third">
-                    <span>
-                        Creatives
-                    </span>
-                    Production
-                    <div class="gold">
-                        <img src="img/we_provide/nav_element_wrapper.png">
+                <div class="nav_element_wrap">
+                    <div class="nav_element second">
+                        <span>
+                            Strategy
+                        </span>
+                        And Planning
+                        <div class="gold">
+                            <img src="img/we_provide/nav_element_wrapper.png">
+                        </div>
+                        <div class="lines">
+                            <svg width="200" height="14" viewBox="0 0 84 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path class="topline" d="M83.3272 9.14233L11.9619 4.65066"
+                                    stroke="url(#paint0_linear_1180_16529)" stroke-width="3.06872" />
+                                <path class="botline" d="M77.3277 12.0837L0.60741 10.2426" stroke="white"
+                                    stroke-width="3.06872" />
+                                <defs>
+                                    <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
+                                        y2="7.88615" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF9323" />
+                                        <stop offset="1" stop-color="#FFF02E" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
                     </div>
-                    <div class="navigation_element_decor">
-                        <svg width="200" height="14" viewBox="0 0 84 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="topline" d="M83.3272 9.14233L11.9619 4.65066"
-                                stroke="url(#paint0_linear_1180_16529)" stroke-width="3.06872" />
-                            <path class="botline" d="M77.3277 12.0837L0.60741 10.2426" stroke="white"
-                                stroke-width="3.06872" />
-                            <defs>
-                                <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
-                                    y2="7.88615" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FF9323" />
-                                    <stop offset="1" stop-color="#FFF02E" />
-                                </linearGradient>
-                            </defs>
-                        </svg>
+                </div>
+                <div class="nav_element_wrap">
+                    <div class="nav_element third">
+                        <span>
+                            Creatives
+                        </span>
+                        Production
+                        <div class="gold">
+                            <img src="img/we_provide/nav_element_wrapper.png">
+                        </div>
+                        <div class="lines">
+                            <svg width="200" height="14" viewBox="0 0 84 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path class="topline" d="M83.3272 9.14233L11.9619 4.65066"
+                                    stroke="url(#paint0_linear_1180_16529)" stroke-width="3.06872" />
+                                <path class="botline" d="M77.3277 12.0837L0.60741 10.2426" stroke="white"
+                                    stroke-width="3.06872" />
+                                <defs>
+                                    <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
+                                        y2="7.88615" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF9323" />
+                                        <stop offset="1" stop-color="#FFF02E" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -272,6 +278,7 @@
             </div>
         </div>
     </div>
+
     <div class="sources_header">
         <div class="header">
             <div class="text_wrapper">
@@ -1084,7 +1091,7 @@
             </div>
         </div>
 
-    </div> -->
+    </div>
 
 
 
