--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="rock">
+    <!-- <div class="rock">
         <header>
             <div class="logo">
                 <div class="wrap el"><img src="img/header/logo/wrap.png"></div>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <img src="img/rock/hand.png" class="hand">
-    </div>
+    </div> -->
 
     <div class="we_provide">
         <div class="header">
@@ -278,7 +278,7 @@
             </div>
         </div>
     </div>
-
+    <!-- 
     <div class="sources_header">
         <div class="header">
             <div class="text_wrapper">
@@ -1091,7 +1091,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
 
 
